# xg-agent-sdk

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  providers.md
examples/: custom_system_prompt.py  multi_turn_client.py  quick_start_grok.py  read_only_review.py  with_claude.py  with_ollama.py  with_openai.py
src/xg_agent_sdk/: __init__.py  __main__.py  _argv.py  _cli.py  _compat.py  _parser.py  client.py  errors.py  helpers.py  install_cli.py  models.py  providers.py  query.py  types.py
src/xg_agent_sdk/_transport/: __init__.py  subprocess.py
tests/: test_argv.py  test_e2e_optional.py  test_install_cli.py  test_models_config.py  test_parser.py  test_query_unit.py
