[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "xg-agent-sdk"
version = "0.1.0"
description = "Claude Agent SDK–shaped Python API for the Grok Build harness — any model"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "manick" }]
keywords = [
  "grok",
  "xai",
  "agent",
  "sdk",
  "coding-agent",
  "llm",
  "claude",
  "openai",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "build>=1.2",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/manick2411/xg-agent-sdk"
Repository = "https://github.com/manick2411/xg-agent-sdk"
Issues = "https://github.com/manick2411/xg-agent-sdk/issues"
Documentation = "https://github.com/manick2411/xg-agent-sdk#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/xg_agent_sdk"]

[tool.hatch.build.targets.sdist]
include = [
  "src/xg_agent_sdk",
  "tests",
  "examples",
  "docs",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "e2e: live tests that require grok CLI + auth (set GROK_E2E=1)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
